<resources>
    <string name="app_name">CoLo</string>
    <string name="hello">Hello</string>
    <string name="search_elements">Search Elements</string>
    <string name="employees">Employees</string>
    <string name="projects">Projects</string>
    <string name="announcement_string">Announcements</string>
    <string name="settings_string">Settings</string>
    <string name="dummy_text">Announcement Text Here</string>
    <string name="home">Home</string>
    <string name="employees_menu">Employees</string>
    <string name="projects_menu">Projects</string>
    <string name="settings_menu">Settings</string>
    <string name="announcement_description">Description Here</string>
    <string name="title_activity_employee_log">EmployeeActivityLog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>